modules/vega-gateway/grafana-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: prometheus
spec:
  parentRefs:
    - name: vega-gateway
      namespace: vega-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
      backendRefs:
        - name: prometheus-kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-vega-gateway
  namespace: prometheus
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: vega-system
  to:
    - group: ""
      kind: Service
      name: prometheus-kube-prometheus-stack-grafana
